// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render determinant progress bar 1`] = `
.c0 {
  background-color: #ECEEF5;
  height: 0.25rem;
  overflow: hidden;
  width: 100%;
}

.c1 {
  background-color: #3C64F4;
  height: 100%;
  overflow: hidden;
  transition: all 150ms ease-out;
  transition-property: width,background-color,height;
  width: 50%;
}

<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="c0"
    role="progressbar"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`render indeterminant progress bar 1`] = `
.c0 {
  background-color: #ECEEF5;
  height: 0.25rem;
  overflow: hidden;
  width: 100%;
}

.c1 {
  background-color: #3C64F4;
  height: 100%;
  overflow: hidden;
  animation: k0 2s ease-in-out infinite;
  position: relative;
  width: 6.25%;
}

@keyframes k0 {
  from {
    left: -10%;
  }

  25% {
    width: 50%;
  }

  to {
    left: 100%;
  }
}

<div>
  <div
    class="c0"
    role="progressbar"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;
